Revert "fix(table): right align table action cells (#4717)"
This reverts commit 3709098bcd53c9519a34a47afa4874be0b340136.

--- a/src/patternfly/components/Table/table.scss
+++ b/src/patternfly/components/Table/table.scss
@@ -1010,10 +1010,6 @@
   vertical-align: middle;
 }
 
-.pf-c-table__action {
-  text-align: right;
-}
-
 // Inline edit
 .pf-c-table__inline-edit-action {
   --pf-c-table--cell--PaddingLeft: 0;
